--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="/src/default.png" />
-    <title>Projekt 3</title>
+    <title>Search-bot</title>
   </head>
   <body>
     <section class="hero is-primary is-fullheight" id="app">
